force-app/main/default/objects/Parameters__c/Parameters__c.object-meta.xml
<CustomObject>
    <description>This object represents parameters that can be used by the batch to set default values, change filter conditions, actions etc.</description>
    <label>Parameter</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>