force-app/main/default/objects/Parameters__c/fields/Job_Execution__c.field-meta.xml
<CustomField>
    <fullName>Job_Execution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>link to the Job Execution Object</description>
    <label>Job Execution</label>
    <referenceTo>Job_Execution__c</referenceTo>
    <relationshipLabel>Parameters</relationshipLabel>
    <relationshipName>Parameters</relationshipName>
    <type>Lookup</type>
</CustomField>