force-app/main/default/objects/Parameters__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Defines the value of the parameter, can be a set of Ids, a status value, a constant etc</description>
    <label>Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>