force-app/main/default/objects/Parameters__c/validationRules/Mandatory_Lookups.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Lookups</fullName>
    <active>true</active>
    <errorConditionFormula>(ISBLANK(Batch_Definition__c) &amp;&amp; ISBLANK( Job_Execution__c ))|| (NOT(ISBLANK(Batch_Definition__c)) &amp;&amp; NOT(ISBLANK( Job_Execution__c )))</errorConditionFormula>
    <errorMessage>Either Batch Definition or Job Execution needs to be filled</errorMessage>
</ValidationRule>